tests/ui/drop/drop_elaboration_with_errors.stderr
error[E0308]: mismatched types
  --> $DIR/drop_elaboration_with_errors.rs:20:5
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     Ok(())
   |     ^^^^^^ expected `()`, found `Result<(), _>`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
